2004-02-02	blytkerchan
	* TODO: update

2003-11-16	blytkerchan
	* queue.c: new file
	* queue.h: ditto

2003-10-28	blytkerchan
	* stack.c: rewrite
	* stack.h: ditto

2003-10-22	blytkerchan
	* stack.c: new file
	* stack.h: ditto

2003-10-09	blytkerchan
	* TODO: update

2003-10-07	blytkerchan
	* Hash.cc: added/replaced copyright notice
	* Hash.h: ditto
	* IniHash.cc: ditto
	* IniHash.h: ditto
	* IntHash.cc: ditto
	* IntHash.h: ditto
	* NocaseStringHash.cc: ditto
	* NocaseStringHash.h: ditto
	* StringHash.cc: ditto
	* StringHash.h: ditto
	* c_interface.cc: ditto
	* hash.h: ditto
	* test1.cc: ditto
	* test2.cc: ditto
	* test3.cc: ditto
	* test4.cc: ditto
	* test5.cc: ditto

2003-10-05	blytkerhan
	* AUTHORS: update to Jail's standards
	* COPYING: removed
	* INSTALL: ditto
	* NEWS: update

2003-06-22 (4)	Ronald Landheer-Cieslak	<ronald@landheer.com>
	* Makefile.am []: libhash_la_LDFLAGS new variable
	[AM_CFLAGS]; add call to config-swing
	[AM_CXXFLAGS]: ditto
	[bin_SCRIPTS]: new variable
	<test6$(EXEEXT)>: new target
	* configure.in: set CFLAGS and LDFLAGS before checking for Swing functions
	create config-libhash script

2003-06-22 (3)	Ronald Landheer-Cieslak	<ronald@landheer.com>
	* Hash.h: repair C declaration of hash
	* Makefile.am: add testcase for C interface
	* c_interface.cc (hash_put): return 0 if OK, 1 if not
	(hash_remove): ditto
	repair hash indirection
	* configure.in: bump minor version number
	* hash.h: repair libhash_hashtype declaration
	repair has_put and hash_remove declarations

2003-06-22 (2)	Ronald Landheer-Cieslak	<ronald@landheer.com>
	* Hash.h: move __cplusplus macro
	make C definition of Hash class
	* IntHash.h: move __cplusplus macro
	* Makefile.am: add c_interface.cc and hash.h
	* c_interface.cc: new file
	* hash.h: ditto

2003-06-22 	Ronald Landheer-Cieslak	<ronald@landheer.com>
	* Makefile.am: remove support for NocaseStringHash and IniHash
	* NocaseStringHash.h: repair include directive
	* StringHash.h: ditto